<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:elevation="5dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mall_tab"
            android:layout_width="@dimen/ic_menu_width"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:onClick="onClickMallTab"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/offers_tab"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/iv_mall_item"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:src="@drawable/ic_tab_mall"
                app:layout_constraintBottom_toTopOf="@id/iv_mall_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
                android:id="@+id/iv_mall_item_sparke"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_mall_item"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_mall_item"
                app:srcCompat="@drawable/svg_sparks" />


        <TextView
                android:id="@+id/iv_mall_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/title_mall"
                android:textAlignment="center"
                android:textColor="@color/light_text_color"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_mall_item_sparke" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offers_tab"
            android:layout_width="@dimen/ic_menu_width"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:onClick="onClickOfferTab"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/map_tab"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mall_tab"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/iv_offer_item"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:src="@drawable/ic_tab_offers"
                app:layout_constraintBottom_toTopOf="@id/iv_offer_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
                android:id="@+id/iv_offer_item_sparke"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_offer_item"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_offer_item"
                app:srcCompat="@drawable/svg_sparks" />


        <TextView
                android:id="@+id/iv_offer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/title_offers"
                android:textAlignment="center"
                android:textColor="@color/light_text_color"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_offer_item_sparke" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_tab"
            android:layout_width="@dimen/ic_menu_width"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:onClick="onClickMapTab"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/more_tab"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/offers_tab"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/iv_map_item"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:src="@drawable/ic_tab_map"
                app:layout_constraintBottom_toTopOf="@id/iv_map_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
                android:id="@+id/iv_map_item_sparke"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_map_item"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_map_item"
                app:srcCompat="@drawable/svg_sparks" />


        <TextView
                android:id="@+id/iv_map_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/title_map"
                android:textAlignment="center"
                android:textColor="@color/light_text_color"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_map_item_sparke" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/more_tab"
            android:layout_width="@dimen/ic_menu_width"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:onClick="onClickMoreTab"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/map_tab"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/iv_more_item"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:src="@drawable/ic_tab_more"
                app:layout_constraintBottom_toTopOf="@id/iv_more_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
                android:id="@+id/iv_more_item_sparke"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ic_menu_height"
                android:scaleType="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_more_item"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_more_item"
                app:srcCompat="@drawable/svg_sparks" />


        <TextView
                android:id="@+id/iv_more_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/title_more"
                android:textAlignment="center"
                android:textColor="@color/light_text_color"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_more_item_sparke" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>